update css to fix image alignment issues when details elements get opened

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ body {
     min-height: 100vh;
 }
 
+/*-----------------------------------------------------
+	Main content Styling
+-----------------------------------------------------*/
+
 .main {
     display: flex;
     align-items: center;
@@ -51,6 +55,8 @@ body {
     padding: 9.5rem 1.5rem 5rem 1.5rem;
     background-image: linear-gradient(180deg, var(--bg-secundary), var(--bg-tertiary));
 }
+
+/* Card styling */
 
 .card {
     position: relative;
@@ -64,6 +70,8 @@ body {
     -webkit-box-shadow: .44rem 2.3rem 1.75rem -.37rem var(--shadow);
     -moz-box-shadow: .44rem 2.3rem 1.75rem -.37rem var(--shadow);
 }
+
+/* Hiding the box illustration on small screens */
 
 .card__box-illustration {
     display: none;
@@ -95,7 +103,7 @@ body {
     margin: 0 auto;
 }
 
-/* Styling for the title of the faq component */
+/* Card title styling */
 
 .card__title {
     margin-bottom: .75rem;
@@ -106,15 +114,40 @@ body {
     text-transform: uppercase;
 }
 
+/* Removing the default abbr element styling */
+
 .card__abbreviation {
     text-decoration: none;
 }
 
-/* Styling for the element which contains the question and answer */
+/* Styling for the elements which contain the questions and answers */
 
 .faq {
     padding: 1.1rem 0;
     border-bottom: .1rem solid var(--divider);
+}
+
+/* Change the font color and weight of the element with the class faq__question 
+when the element with class faq has the open attribute */
+
+.faq[open] .faq__question {
+    color: var(--accent-primary);
+    font-weight: 700;
+}
+
+/* Rotate and slightly move up the arrow icon on the right side of the element with the 
+class faq__question when the element with class faq has the open attribute */
+
+.faq[open] .faq__question::after {
+    transform: rotate(180deg) translateY(-.1rem);
+}
+
+/* If the element with class faq has an open attribute, then fade in the 
+content from the right side of the element with class faq__answer */
+
+.faq[open] .faq__answer {
+    opacity: 1;
+    transform: translateX(0)
 }
 
 /* Question styling */
@@ -130,31 +163,20 @@ body {
     transition: color .25s ease-in-out;
 }
 
+/* Change the text color for the element with the class faq__question on hover */
+
+.faq__question:hover {
+    color: var(--accent-secundary);
+}
+
+/* Styling for the arrow icon inside the element with the class faq__question */
+
 .faq__question::after {
     content: url(../images/icon-arrow-down.svg);
     position: absolute;
     bottom: 0.1rem;
     right: 0;
     transition: all .25s ease-in-out;
-}
-
-/* Change the color of the question on hover */
-
-.faq__question:hover {
-    color: var(--accent-secundary);
-}
-
-/* Change the font color and weight of the question when the element with class faq__box has the open attribute */
-
-.faq[open] .faq__question {
-    color: var(--accent-primary);
-    font-weight: 700;
-}
-
-/* Rotate the arrow icon on the right side of the question when the element with class faq__box has the open attribute */
-
-.faq[open] .faq__question::after {
-    transform: rotate(180deg) translateY(-.1rem);
 }
 
 /* Answer styling */
@@ -171,15 +193,16 @@ body {
     transition: all .45s ease-in-out;
 }
 
-.faq[open] .faq__answer {
-    opacity: 1;
-    transform: translateX(0)
-}
+/*-----------------------------------------------------
+	Footer Content Styling
+-----------------------------------------------------*/
 
 .footer {
     padding: 1rem;
     background-color: var(--bg-primary);
 }
+
+/* Footer text styling */
 
 .footer__text {
     display: flex;
@@ -191,11 +214,15 @@ body {
     text-align: center;
 }
 
+/* Styling for the links inside the footer */
+
 .footer__link {
     color: var(--txt-primary);
     text-decoration: none;
     transition: color .25s ease-in-out;
 }
+
+/* On hover change the link color to orange */
 
 .footer__link:hover {
     color: var(--accent-secundary);
@@ -205,7 +232,10 @@ body {
 	Media Queries
 -----------------------------------------------------*/
 
-@media (min-width: 450px) {
+@media (min-width: 390px) {
+
+    /* Separating the two spans inside the footer */
+
     .footer__text span:last-child {
         margin-left: 0.2rem;
     }
@@ -214,21 +244,23 @@ body {
 @media (min-width: 1150px) {
     .card {
         justify-content: flex-end;
-        max-width: 55rem;
+        max-width: 57rem;
         padding: 5rem;
     }
 
     .card__box-illustration {
         position: absolute;
-        top: 42.5%;
-        left: -5.1rem;
+        top: 0;
+        left: -5.7rem;
         display: block;
-        width: 10.5rem;
+        margin-top: 23.5%;
         transition: all .25s ease-in-out;
         z-index: 3;
     }
 
-    /* */
+    /* If the browser supports :has() and :not() selectors the box illustration will 
+    move slightly to the right when the user hovers over the element with the class of 
+    faq__question */
 
     .card:has(:not(.faq[open]) > .faq__question:hover) > .card__box-illustration {
         transform: translateX(-1.9rem);
@@ -244,7 +276,7 @@ body {
 
     .card__woman-illustration {
         width: 100%;
-        margin: auto auto auto -5rem;
+        margin: 19% auto auto -5rem;
         z-index: 2;
     }
 
@@ -259,7 +291,7 @@ body {
     .card__shadow-illustration {
         position: absolute;
         width: 200%;
-        margin: -53% auto auto -32.3rem;
+        margin: -52% auto auto -32.3rem;
         z-index: 1;
     }
 
